<resources>
    <string name="app_name">Video-Image Editor</string>
    <string name="cut_video_using_time">Cut Video Using Time</string>
    <string name="image_to_video">Convert Image To Video</string>
    <string name="add_water_mark_on_video">Add a Water Mark on Video</string>
    <string name="merge_image_and_video">Combine Image and Video</string>
    <string name="merge_images">Combine Images</string>
    <string name="merge_videos">Combine Videos</string>
    <string name="camera_storage_permission_message">This app needs access to your camera and storage so you can take/get video and pictures.</string>
    <string name="input_path">Input Path</string>
    <string name="uploadvideo">Select Video File</string>
    <string name="uploadImage">Select Image File</string>
    <string name="select_starting_time">Select Starting Time (hh:mm:ss)</string>
    <string name="select_end_time">Select End Time (hh:mm:ss)</string>
    <string name="cut_video">Cut</string>
    <string name="zero_time">00:00:00</string>
    <string name="video_not_selected_toast_message">Video not selected</string>
    <string name="audio_not_selected_toast_message">Audio not selected</string>
    <string name="image_not_selected_toast_message">Image not selected</string>
    <string name="input_video_validate_message">Please select Input video</string>
    <string name="input_audio_validate_message">Please select Input audio</string>
    <string name="start_time_end_time_validation_message"><![CDATA[Start Time < End Time]]></string>
    <string name="end_time_validate_message">Please select end time</string>
    <string name="start_time_validate_message">Please select start time</string>
    <string name="time_range_validate_message">Please select time in Range</string>
    <string name="create">Create</string>

    <string name="input_image_validate_message">Please select Input image</string>
    <string name="please_enter_second">Please enter second</string>
    <string name="please_add_x_and_y_position_of_water_mark_in_percentage">Please Add X and Y position of water mark in Percentage(%)</string>
    <string name="please_add_x_and_y_position_of_text_in_percentage">Please Add X and Y position of Text in Percentage(%)</string>
    <string name="please_add_x_and_y_position_of_second_gif_in_percentage">Please Add X and Y position of second GIF in Percentage(%)</string>
    <string name="please_add_scale_second_gif_in_percentage">Please Add height and width of second GIF in Percentage(%)</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add_water_mark">Add Water Mark</string>
    <string name="x_position_validation">Please add X position</string>
    <string name="y_position_validation">Please add Y position</string>
    <string name="x_validation_invalid">Please add X in percentage(%)</string>
    <string name="y_validation_invalid">Please add Y in percentage(%)</string>

    <string name="x_width_validation">Please add width position</string>
    <string name="y_height_validation">Please add height position</string>
    <string name="x_width_invalid">Please add width in percentage(%)</string>
    <string name="y_height_invalid">Please add height in percentage(%)</string>
    <string name="combine">Combine</string>
    <string name="enter_image_display_time_in_second">Enter image display time in second</string>
    <string name="select_images">Select Images</string>
    <string name="select_videos">Select Videos</string>
    <string name="compress">Compress</string>
    <string name="extract_frames">Extract Frames</string>
    <string name="extract_frame_from_video">Extract Frames from Video</string>
    <string name="compress_a_video">Compress a video</string>
    <string name="extract_audio_from_video">Extract audio from video</string>
    <string name="extract_audio">Extract Audio</string>
    <string name="fast_slow_motion_video">Fast/Slow Motion Video</string>
    <string name="fast">Fast</string>
    <string name="slow">Slow</string>
    <string name="reverse_video">Reverse Video</string>
    <string name="if_you_want_to_reverse_video_with_audio_then_please_on_this_switch">If you want to reverse video with audio then please \'ON\' this switch</string>
    <string name="if_you_want_to_fast_motion_video_then_please_on_this_switch_otherwise_video_converted_in_to_slow_motion">If you want to fast motion video then please \'ON\' this switch otherwise video converted in to slow motion</string>
    <string name="if_you_want_to_fast_audio_then_please_on_this_switch_otherwise_audio_converted_in_to_slow_audio">If you want to fast audi then please \'ON\' this switch otherwise audio converted in to slow.</string>
    <string name="apply_fade_in_and_fade_out">Apply Fade-In and Fade-Out</string>
    <string name="video_fade_in_and_fade_out">Video Fade In and Fade Out</string>
    <string name="video_to_gif">Video To GIF</string>
    <string name="convert_into_gif">Convert into GIF</string>
    <string name="video_rotate">Video Rotate/Flip(Mirroring)</string>
    <string name="rotate_90_degree">Rotate 90 Degree</string>
    <string name="rotate_180_degree">Rotate 180 Degree</string>
    <string name="rotate_270_degree">Rotate 270 Degree</string>
    <string name="_90_counter_clockwise_and_vertical_flip">90 Counter Clockwise and Vertical Flip</string>
    <string name="_90_clockwise">90 Clockwise</string>
    <string name="_90_counter_clockwise">90 Counter Clockwise</string>
    <string name="_90_clockwise_and_vertical_flip">90 Clockwise and Vertical Flip</string>
    <string name="merge_video_and_audio">Merge Video and Audio</string>
    <string name="select_audio_file">Select Audio File</string>
    <string name="please_select_input_audio">Please select Input Audio</string>
    <string name="add_text_on_video">Add Text On Video</string>
    <string name="enter_text">Enter Text</string>
    <string name="please_add_text_validation">Please enter text for this process</string>
    <string name="select_font_file">Select Font File</string>
    <string name="font_selection_validation">Please select Font</string>
    <string name="font_not_selected">Font not selected</string>
    <string name="audio_remove_from_video">Audio Remove from Video</string>
    <string name="remove_audio">Remove Audio</string>
    <string name="select_image_file">Select Image File</string>
    <string name="merge_image_and_audio">Merge Image And MP3 Audio</string>
    <string name="please_select_input_image">Please select input image</string>
    <string name="select_mp3_file">Select MP3 File</string>
    <string name="set_aspect_ratio">Set Aspect Ratio</string>
    <string name="apply_aspect_ratio">Apply Aspect Ratio</string>
    <string name="video_operations">Video FFMPEG Operations</string>
    <string name="other_ffmpeg_operations">Other FFMPEG Operations</string>
    <string name="ffpmeg_title">FFMPEG</string>
    <string name="merge_gif">Merge GIF</string>
    <string name="select_gif_file">Select GIF File</string>
    <string name="please_select_gif_file">Please select GIF file</string>
    <string name="please_selected_minimum_2_gif_file">Please select min 2 Gif file</string>
    <string name="gif_extension_validation">There is other file selected, Please select  Gif file</string>
    <string name="input_gif_validate_message">Please select Input GIFs</string>
    <string name="merge_gifs">Merge GIFs</string>
    <string name="width_scale">Width</string>
    <string name="height_scale">Height</string>
    <string name="merge_audios">Merge Audios</string>
    <string name="change_audio_volume">Change Audio Volume</string>
    <string name="min_audio_selection_validation">Please select minimum 2 audio files</string>
    <string name="validation_of_audio">Please select audio</string>
    <string name="fast_slow_audio_convert">Fast/Slow audio convert</string>
    <string name="crop_audio_using_time">Crop audio using time</string>
    <string name="compress_audio">Compress Audio</string>
    <string name="output_path">Output Path : \n%s</string>
    <string name="output_path_with_size" formatted="false">Output Path : \n%s Output file Size : \n%s</string>
</resources>