<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".middlewareActivity.VideoProcessActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/btnCutVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cut_video_using_time"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnImageToVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_to_video"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCutVideo" />

        <Button
            android:id="@+id/btnAddWaterMarkOnVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_water_mark_on_video"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnImageToVideo" />

        <Button
            android:id="@+id/btnAddTextOnVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_text_on_video"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddWaterMarkOnVideo" />

        <Button
            android:id="@+id/btnCombineImageVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merge_image_and_video"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddTextOnVideo" />

        <Button
            android:id="@+id/btnCombineImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merge_images"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCombineImageVideo" />

        <Button
            android:id="@+id/btnCombineVideos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merge_videos"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCombineImages" />

        <Button
            android:id="@+id/btnCompressVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compress_a_video"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCombineVideos" />

        <Button
            android:id="@+id/btnExtractVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extract_frame_from_video"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCompressVideo" />

        <Button
            android:id="@+id/btnExtractAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extract_audio_from_video"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnExtractVideo" />

        <Button
            android:id="@+id/btnMotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fast_slow_motion_video"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnExtractVideo" />

        <Button
            android:id="@+id/btnReverseVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reverse_video"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMotion" />

        <Button
            android:id="@+id/btnFadeInFadeOutVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video_fade_in_and_fade_out"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnReverseVideo" />

        <Button
            android:id="@+id/btnVideoConvertIntoGIF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video_to_gif"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFadeInFadeOutVideo" />

        <Button
            android:id="@+id/btnVideoRotateFlip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video_rotate"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnVideoConvertIntoGIF" />

        <Button
            android:id="@+id/btnMergeVideoAndAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merge_video_and_audio"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnVideoRotateFlip" />

        <Button
            android:id="@+id/btnRemoveAudioFromVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audio_remove_from_video"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnVideoRotateFlip" />

        <Button
            android:id="@+id/btnMergeImageAndAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/merge_image_and_audio"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRemoveAudioFromVideo" />

        <Button
            android:id="@+id/btnSetAspectRatio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_aspect_ratio"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRemoveAudioFromVideo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>