<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".videoProcessActivity.AddWaterMarkOnVideoActivity">

    <TextView
        android:id="@+id/tvInputPathVideo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/input_path"
        android:gravity="center|start"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnVideoPath"/>

    <Button
        android:id="@+id/btnVideoPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:text="@string/uploadvideo"
        app:layout_constraintBottom_toBottomOf="@+id/tvInputPathVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvInputPathVideo" />

    <TextView
        android:id="@+id/tvInputPathImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/input_path"
        android:gravity="center|start"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvInputPathVideo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnImagePath"/>

    <Button
        android:id="@+id/btnImagePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:text="@string/uploadImage"
        app:layout_constraintBottom_toBottomOf="@+id/tvInputPathImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvInputPathImage" />

    <TextView
        android:id="@+id/txtHintContain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_add_x_and_y_position_of_water_mark_in_percentage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvInputPathImage" />

    <EditText
        android:id="@+id/edtXPos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/x"
        android:gravity="center"
        android:maxLength="3"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/edtYPos"
        app:layout_constraintTop_toBottomOf="@+id/txtHintContain"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtYPos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/y"
        android:gravity="center"
        android:maxLength="3"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/edtXPos"
        app:layout_constraintTop_toBottomOf="@+id/txtHintContain"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_water_mark"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtYPos"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvOutputPath"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:gravity="center|top"
        android:padding="10dp"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <include
        android:id="@+id/mProgressView"
        layout="@layout/progress_view"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>